package Game;

/**
 * Created by Kate on 06.04.2015.
 */

public class Setting {
    // создать дополнительно настройки
}
