package Main;

/**
 * Created by Kate on 10.05.2015.
 */

public class music {

  // Media audio = new Media(this.getClass().getResource("myfortetris.wav").toString());
 //   final MediaPlayer playerAudio=new MediaPlayer(audio);
 //   playerAudio.setCycleCount(MediaPlayer.INDEFINITE);
  //  playerAudio.setAutoPlay(true);
}
